--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,10 +9,10 @@
     <string name="action_settings">Settings</string>
 
     <string name="menu_home">DesiMilk</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_gallery">Order</string>
     <string name="menu_slideshow">Slideshow</string>
     <string name="menu_tools">Tools</string>
     <string name="menu_share">Share</string>
-    <string name="menu_send">Send</string>
+    <string name="menu_send">Shared</string>
     <string name="no_internet">No internet connection</string>
 </resources>
